<resources>
    <string name="app_name">F&amp;B</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_reviews">Pending Reviews</string>
    <string name="menu_saved_item">Saved Items</string>
    <string name="recently_searched">Recently Searched</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="primary">Primary</string>
    <string name="user_profile">User Profile</string>
    <string name="user_name">Marcus Sagoe</string>
    <string name="action_logOut">log out</string>
    <string name="search">Search Item</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_categories">Categories</string>
    <string name="Help">Help</string>
    <string name="title_orders">orders</string>
</resources>