<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_orders_id">

    <fragment
        android:id="@+id/nav_orders_id"
        android:name="com.example.fb.side_drawer.reviews.ReviewsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_reviews" />

    <fragment
        android:id="@+id/nav_reviews_id"
        android:name="com.example.fb.side_drawer.orders.OrdersFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_save_item_id"
        android:name="com.example.fb.side_drawer.save.SaveFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_save" />
</navigation>